--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,4 @@
 * {
-    // background-color: #1e1e1e;
-    // background-color: #151515;
     font-family: 'Urbanist', sans-serif;
     font-optical-sizing: auto;
   }
@@ -9,10 +7,14 @@ body{
     background-color: #151515;
 }  
 .top-bar {
+    position: sticky;
+    top: 0;
     display: flex;
     color: #fff;
     padding: 0 40px;
     border-bottom: solid 2px #272727;
+    background-color: #151515;
+    z-index: 1;
     .logo-wrapper{
         padding: 20px 16px 20px 0;
         width: 240px;
@@ -108,7 +110,6 @@ body{
     /*--------------------------------------------Navbar--------------------------------------------*/
     .nav-bar {
         width: 240px;
-        // transform: translateY(-8px);
         border-right: solid 2px #272727;
         min-height: calc(100vh - 89.52px);
         .nav-list{
@@ -203,6 +204,7 @@ body{
             }
             .component-row{
                 display: flex;
+                align-items: flex-start;
                 gap: 18px;
                 .heatmap-component{
                     background: #1E1E1E;
@@ -214,7 +216,7 @@ body{
                         display: flex;
                         justify-content: space-between;
                         border-bottom: solid 2px #272727;
-                        padding: 10px 16px 10px 24px;
+                        padding: 16px 16px 10px 24px;
                         .component-title{
                             color: #FFF;
                             text-align: center;
@@ -251,13 +253,13 @@ body{
                         .days-list{
                             display: flex;
                             list-style: none;
-                            border:solid 1px #ccc;
+                            border:solid 1px #272727;
                             border-radius: 8px;
                             overflow: hidden;
                             padding: 0px;
                             .day-list-item{
                                 flex:1;
-                                border-right: solid 1px #ccc;
+                                border-right: solid 1px #272727;
                                 padding: 10px;
                                 text-align: center;
                                 cursor: pointer;
@@ -272,60 +274,191 @@ body{
                         display: flex;
                         justify-content: space-between;
                         padding: 10px 16px 10px 24px;
-                        .circular-progress {
-                            width: 190px;
-                            height: 190px;
-                            border-radius: 50%;
+                        // margin-bottom: 20px;
+                        min-height: 205px;
+                        .data-indicator-wrapper{
                             display: flex;
-                            justify-content: center;
+                            flex-direction: column;
                             align-items: center;
-                            .inner-circle {
-                              position: absolute;
-                              width: 160px;
-                              height: 160px;
-                              border-radius: 50%;
-                            //   background-color: lightgrey;
-                            }
-                            .percentage {
-                              position: relative;
-                            //   font-size: var(--font-size);
-                            //   color: rgb(0, 0, 0, 0.8);
-                              color: #FFF !important;
+                            gap: 20px;
+                            .indicator-name{
+                                margin: 0px;
+                                color: #FFF;
                                 text-align: center;
-                                font-family: Urbanist !important;
-                                font-size: 30px;
+                                font-family: Urbanist;
+                                font-size: 15px;
                                 font-style: normal;
-                                font-weight: 700;
-                                line-height: 100%; /* 30px */
-                                text-transform: capitalize
+                                font-weight: 400;
+                                line-height: 100%; /* 15px */
+                                text-transform: capitalize;
                             }
-                          }
-                          
+                            .circular-progress {
+                                width: 150px;
+                                height: 150px;
+                                border-radius: 50%;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                .inner-circle {
+                                  position: absolute;
+                                  width: 130px;
+                                  height: 130px;
+                                  border-radius: 50%;
+                                }
+                                .percentage {
+                                  position: relative;
+                                  color: #FFF !important;
+                                  text-align: center;
+                                  font-family: Urbanist !important;
+                                  font-size: 30px;
+                                  font-style: normal;
+                                  font-weight: 700;
+                                  line-height: 100%; /* 30px */
+                                  text-transform: capitalize
+                                }
+                            }
+                        }
+                    }
+                    .component-footer{
+                        padding: 16px 16px 16px 24px;
+                        border-top: solid 2px #272727;
+                        p {
+                            margin: 0;
+                            color: #898989;
+                            text-align: center;
+                            font-family: Urbanist;
+                            font-size: 12px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 100%; /* 12px */
+                            text-align: left;
+                        }
                     }
                 }
                 .most-day-away-component{
-                    flex: 1;
                     background: #1E1E1E;
+                    flex: 1;
+                    border-radius: 8px;
+                    overflow: hidden;
                     .header-row{
                         background: transparent;
                         display: flex;
                         justify-content: space-between;
                         border-bottom: solid 2px #272727;
+                        padding: 16px 16px 10px 24px;
+                        .component-title{
+                            color: #FFF;
+                            text-align: center;
+                            font-family: Urbanist;
+                            font-size: 16px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 100%;
+                            margin: 0px;
+                        }
+                        .drodowns-component{
+                            display: flex;
+                            align-items: center;
+                            select {
+                                background-color: transparent;
+                                border: none;
+                                color: #898989;
+                                text-align: center;
+                                font-family: Urbanist;
+                                font-size: 15px;
+                                font-style: normal;
+                                font-weight: 400;
+                                line-height: 100%; /* 15px */
+                                text-transform: uppercase;
+                            }
+                            select:active{
+                                outline: none;
+                            }
+                        }
                     }
+                    .data-component{
+                        min-height: 298px;
+                        padding: 10px 16px 10px 24px;
+                        .most-day-away-list{
+                            list-style: none;
+                            padding: 0px;
+                            .most-day-away-list-item{
+                                display: flex;
+                                justify-content: space-between;
+                                margin-bottom: 15px;
+                                .user-name-pic{
+                                    display: flex;
+                                    align-items: center;
+                                    gap: 16px;
+                                    .user-name{
+                                        margin: 0px;
+                                        overflow: hidden;
+                                        color: #898989;
+                                        text-overflow: ellipsis;
+                                        white-space: nowrap;
+                                        font-family: Inter;
+                                        font-size: 14px;
+                                        font-style: normal;
+                                        font-weight: 400;
+                                        line-height: 20px; /* 142.857% */
+                                    }
+                                }
+                                .away-days-info{
+                                    color: #FFF;
+                                    font-family: Inter;
+                                    font-size: 14px;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    line-height: 20px; /* 142.857% */
+                                }
+                            }
+                        }
+                    }
+                    .component-footer{
+                        padding: 16px 16px 16px 24px;
+                        border-top: solid 2px #272727;
+                        p {
+                            margin: 0;
+                            color: #898989;
+                            text-align: center;
+                            font-family: Urbanist;
+                            font-size: 12px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 100%; /* 12px */
+                            text-align: left;
+                        }
+                    }
+                }
+                .avatar-component{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                }
+                .avatar-component::after{
+                    content: '';
+                    width: 8px;
+                    height: 8px;
+                    border-radius: 50%;
+                    background: #FFD928;
+                    position: absolute;
+                    top: 0px;
+                    right: -20px;
                 }
             }
         }
         /*--------------------------------------------Notifications Component--------------------------------------------*/
         .notifications-component{
             width: 464px;
-            min-height: calc(100vh - 100px);
+            min-height: calc(100vh - 90px);
             padding: 0 24px 24px 24px;
             border-left: solid 2px #272727;
-            position: absolute;
+            position: fixed;
             z-index: 1;
             background-color: #151515;
             right: 0px;
-            top: -10px;
+            top: 70px;
             .notify-header{
                 display: flex;
                 align-items: center;
